<resources>
    <string name="app_name">MedNex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="login_or_create_an_account_nto_connect_with_a_bigger_world">Login or Create an account\nto connect with a bigger world</string>
    <string name="login_or_sign_up">Login or Sign Up</string>
    <string name="welcome_illustration">Welcome Illustration</string>
    <string name="first_name">First Name</string>
    <string name="your_first_name">Your first name</string>
    <string name="last_name">Last Name</string>
    <string name="your_last_name">Your last name</string>
    <string name="email_address">Email Address</string>
    <string name="your_email_address">Your email address</string>
    <string name="password">Password</string>
    <string name="your_password">Your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_password_confirmation">Your password confirmation</string>
    <string name="create_account">Create Account</string>
    <string name="by_continuing_you_agree_to_the_terms_of_services_n_and_privacy_policy">By continuing, you agree to the Terms of Services \n and Privacy Policy</string>
    <string name="your_full_name">Your full name</string>
    <string name="full_name">Full Name</string>
    <string name="your_username">Your username</string>
    <string name="username">Username</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="lorem_small">Lorem ipsum dolor sit amet. Ab consequatur doloremque est minima voluptatem et odit dolor et deserunt mollitia est accusantium cupiditate est perspiciatis consequatur.</string>
</resources>