<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.fragments.SignUpFragment"
    android:background="@color/bg_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_first_name_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/first_name"
            android:textColor="@color/txt_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/rubik_medium"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/your_first_name"
            android:textColorHint="@color/et_hint_color"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textColor="@color/txt_color"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_first_name_heading" />

        <TextView
            android:id="@+id/tv_last_name_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/last_name"
            android:textColor="@color/txt_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/rubik_medium"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/your_last_name"
            android:textColorHint="@color/et_hint_color"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textColor="@color/txt_color"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_last_name_heading" />

        <TextView
            android:id="@+id/tv_email_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/email_address"
            android:textColor="@color/txt_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/rubik_medium"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/your_email_address"
            android:textColorHint="@color/et_hint_color"
            android:inputType="textEmailAddress"
            android:textAllCaps="false"
            android:textColor="@color/txt_color"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_heading" />

        <TextView
            android:id="@+id/tv_password_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/txt_color"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_address" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/rubik_medium"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/your_password"
            android:textColorHint="@color/et_hint_color"
            android:inputType="textPassword"
            android:textAllCaps="false"
            android:textColor="@color/txt_color"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_heading" />

        <TextView
            android:id="@+id/tv_confirm_password_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/confirm_password"
            android:textColor="@color/txt_color"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/rubik_medium"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/your_password_confirmation"
            android:textColorHint="@color/et_hint_color"
            android:inputType="textPassword"
            android:textAllCaps="false"
            android:textColor="@color/txt_color"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password_heading" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/rubik_medium"
            android:padding="16dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confirm_password" />

        <LinearLayout
            android:id="@+id/loading_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:padding="9dp"
            android:background="@drawable/bg_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confirm_password">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:indicatorSize="25dp"
                app:indicatorColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_agree_policy_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/by_continuing_you_agree_to_the_terms_of_services_n_and_privacy_policy"
            android:textColor="@color/txt_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_create_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>